# mlx90640-driver-mcp2221-py

./: .gitignore  LICENSE  README.md  app-tests-jetson-nano-report.html  app-tests-rpi4-report.html  app-tests-ubuntu-pc-report.html  app-tests-win10-pc-report.html  mlx90640_dump.py  setup.cfg  setup.py
.github/workflows/: pythonpublish.yml
mcp2221/: __init__.py  cli.py  mcp2221.py
mcp2221/c-code/: Makefile  main.c
mcp2221/c-code/inc/: MLX90640_I2C_Driver_mcp2221.h  mcp2221_hidapi.h  mlx90640_driver_register.h
mcp2221/c-code/src/: MLX90640_I2C_Driver_mcp2221.c  mcp2221_hidapi.c
tests/app_testing/: test_init.py
