[metadata]
name = mlx90640-driver-mcp2221
url = https://github.com/melexis-fir/mlx90640-driver-mcp2221-py
project_urls =
    Documentation = https://melexis-fir.github.io/mlx90640-driver-mcp2221-py/
    Source Code = https://github.com/melexis-fir/mlx90640-driver-mcp2221-py
    Issue Tracker = https://github.com/melexis-fir/mlx90640-driver-mcp2221-py/issues
license = Apache License, Version 2.0
author = Karel Vanroye
author_email = kva@melexis.com
maintainer = melexis-fir
description = I2C for MLX90640 using the EVB90640-41 on (windows 10, linux pc, raspberry pi, jetson nano, beagle bone, ...)
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX
    Programming Language :: Python :: 3.6
    Topic :: Utilities

[options]
packages = mlx90640_mcp2221
package_dir = mlx90640_mcp2221=mcp2221
include_package_data = true
python_requires = >= 3.6

[options.entry_points]
console_scripts =
    mlx90640-mcp2221-dump = mlx90640_mcp2221.cli:main

[options.package_data]
mlx90640_mcp2221 = 
    libs/**/*.dll
    libs/**/*.so
